src/test/deca/codegen/valid/test_debordement.deca
// Description:
//    Test de débordement de registres.
//
// Resultats attendus:
//    Spilling: 21

class A {
    int i = 1;
}

{
    A a = new A();
    int res;
    res = (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + 
          (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + (a.i + 1))))))))))))))))))));
          
    println("Resultat attendu : 21");
    println("Obtenu: ", res);
}