src/test/deca/codegen/invalid/test_devision_invalid.deca
{
    int a = 12;
    int b = 0;
    float res ;
    res = a/b;
    println("La devision de  par b est ",res);

}